--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
   "scripts": {
     "start": "node app/index.js",
     "dev": "node --watch app/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "author": "estefania osses vera",
   "license": "ISC",
   "dependencies": {
+    "@babel/preset-env": "^7.25.9",
+    "babel-jest": "^29.7.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "node-cache": "^5.1.2"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0"
   }
 }
